@@ -3,6 +3,7 @@ package com.nailshop.nailborhood.service.review;
 import com.nailshop.nailborhood.domain.member.Customer;
 import com.nailshop.nailborhood.domain.review.Review;
 import com.nailshop.nailborhood.domain.review.ReviewImg;
+import com.nailshop.nailborhood.domain.review.ReviewReport;
 import com.nailshop.nailborhood.domain.shop.Shop;
 import com.nailshop.nailborhood.dto.common.CommonResponseDto;
 import com.nailshop.nailborhood.dto.common.PaginationDto;
@@ -11,13 +12,14 @@ import com.nailshop.nailborhood.dto.review.response.ReviewListResponseDto;
 import com.nailshop.nailborhood.dto.review.response.ReviewResponseDto;
 import com.nailshop.nailborhood.exception.NotFoundException;
 import com.nailshop.nailborhood.repository.category.CategoryReviewRepository;
-import com.nailshop.nailborhood.repository.member.CustomerRepositoryKe;
 import com.nailshop.nailborhood.repository.review.ReviewImgRepository;
+import com.nailshop.nailborhood.repository.review.ReviewReportRepository;
 import com.nailshop.nailborhood.repository.review.ReviewRepository;
 import com.nailshop.nailborhood.repository.shop.ShopRepository;
 import com.nailshop.nailborhood.security.service.jwt.TokenProvider;
 import com.nailshop.nailborhood.service.common.CommonService;
 import com.nailshop.nailborhood.type.ErrorCode;
+import com.nailshop.nailborhood.type.ReviewReportStatus;
 import com.nailshop.nailborhood.type.ShopStatus;
 import com.nailshop.nailborhood.type.SuccessCode;
 import lombok.RequiredArgsConstructor;
@@ -27,10 +29,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @RequiredArgsConstructor
 @Service
@@ -40,16 +39,12 @@ public class ReviewInquiryService {
     private final ShopRepository shopRepository;
     private final ReviewRepository reviewRepository;
     private final ReviewImgRepository reviewImgRepository;
-    private final CustomerRepositoryKe customerRepositoryKe;
+    private final ReviewReportRepository reviewReportRepository;
     private final CategoryReviewRepository categoryReviewRepository;
 
 
     // 리뷰 상세조회
-    public CommonResponseDto<Object> detailReview(Long reviewId, Long customerId, Long shopId) {
-
-        // 고객 정보와 존재 여부
-        Customer customer = customerRepositoryKe.findById(customerId)
-                .orElseThrow(() -> new NotFoundException(ErrorCode.CUSTOMER_NOT_FOUND));
+    public CommonResponseDto<Object> detailReview(Long reviewId, Long shopId) {
 
         // 매장 존재 여부
         Shop shop = shopRepository.findByShopIdAndIsDeleted(shopId)
@@ -60,13 +55,18 @@ public class ReviewInquiryService {
                 .orElseThrow(() -> new NotFoundException(ErrorCode.REVIEW_NOT_FOUND));
 
         // 고객 닉네임, 프로필 이미지 가져오기
-        String nickName = customer.getMember().getNickname();
-        String profileImg = customer.getMember().getProfileImg();
+        String nickName = review.getCustomer().getMember().getNickname();
+        String profileImg = review.getCustomer().getMember().getProfileImg();
 
-        // 매장 이름, 영업상태, 신고상태, 카테고리
-        // TODO : 리뷰 신고 상태 추가해야함
+        // 영업상태, 신고상태, 카테고리
         ShopStatus shopStatus = shop.getStatus();
+
+        ReviewReport reviewReport = reviewReportRepository.findReviewReportByReviewId(reviewId);
+        String reviewReportStatus = (reviewReport != null) ? reviewReport.getStatus() : "신고 되지 않았음";  // "리뷰 보고서 없음" 대신 적절한 기본값을 설정해주세요.
+
         List<String> categoryList = categoryReviewRepository.findCategoryTypeByReviewId(reviewId);
+
+
 
         //리뷰 이미지
         List<ReviewImg> reviewImgList = reviewImgRepository.findByReviewImgListReviewId(reviewId);
@@ -79,6 +79,7 @@ public class ReviewInquiryService {
                 .reviewId(reviewId)
                 .shopName(shop.getName())
                 .shopStatus(shopStatus)
+                .reviewReportStatus(reviewReportStatus)
                 .categoryTypeList(categoryList)
                 .imgPathMap(reviewImgPathMap)
                 .contents(review.getContents())
@@ -95,10 +96,27 @@ public class ReviewInquiryService {
 
 
     // 리뷰 전체 조회
-    public CommonResponseDto<Object> allReview(int page, int size, String sortBy) {
+    public CommonResponseDto<Object> allReview(int page, int size, String sortBy, String category) {
+
+        // category 리스트화
+        List<Long> categoryIdList = null;
+        if (category != null && !category.isEmpty()){
+
+            categoryIdList = Arrays.stream(category.split(","))
+                    .map(Long::parseLong)
+                    .toList();
+        }
 
         PageRequest pageable = PageRequest.of(page - 1, size, Sort.by(sortBy).descending());
-        Page<Review> reviewPage = reviewRepository.findAllIsDeletedFalse(pageable);
+        Page<Review> reviewPage;
+
+        if(categoryIdList == null || categoryIdList.isEmpty()){
+            // 카테고리 x
+            reviewPage = reviewRepository.findAllIsDeletedFalse(pageable);
+        }
+        else {
+            reviewPage = reviewRepository.findByCategoryIdListAndIsDeletedFalse(categoryIdList, pageable);
+        }
 
         if(reviewPage.isEmpty()){
             throw new NotFoundException(ErrorCode.REVIEW_NOT_FOUND);
@@ -109,7 +127,7 @@ public class ReviewInquiryService {
 
         for(Review review : reviewList ){
 
-            String mainImgPath = review.getReviewImgList().get(0).getImgPath();
+            String mainImgPath = review.getReviewImgList().getFirst().getImgPath();
 
             List<String> categoryTypeList = categoryReviewRepository.findCategoryTypeByReviewId(review.getReviewId());
 
